# wasmtime

./: Cargo.toml
crates/cli-flags/src/: lib.rs
crates/wasi-cloud-core/: Cargo.toml
crates/wasi-cloud-core/src/: lib.rs
crates/wasi-cloud-core/src/actor/component/: blobstore.rs  bus.rs  http.rs  keyvalue.rs  mod.rs
crates/wasi-cloud-core/src/capability/: builtin.rs  mod.rs
crates/wasi-cloud-core/src/capability/provider/: mod.rs
crates/wasi-cloud-core/src/capability/provider/aws/: mod.rs  s3.rs
crates/wasi-cloud-core/src/component/: blobstore.rs  http.rs  keyvalue.rs  messaging.rs  mod.rs
crates/wasi-cloud-core/wit/: guest.wit  host.wit
src/commands/: run.rs
