[package]
name = "wasmtime-wasi-cloud-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
log = [
    "tracing/log"
]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await", "std"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
log = { workspace = true }
nkeys = { workspace = true }
rand = { workspace = true, features = ["std"] }
rmp-serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true }
# wascap = { workspace = true }
wasi-common = { workspace = true }
# wasmcloud-compat = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = ["addr2line", "async", "cache", "component-model", "coredump", "cranelift", "parallel-compilation", "pooling-allocator" ] }
wasmtime-wasi = { workspace = true  }
wasmtime-wasi-nn = { workspace = true }
wasmtime-wasi-threads = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wit-component = { workspace = true }
